Preventing the forum box from overflowing

--- a/public/home.css
+++ b/public/home.css
@@ -32,6 +32,8 @@ div {
     margin: 200px auto; 
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-height: 65vh;
+    overflow-y: auto; /* Prevents content from overflowing /*
 }
 
 nav {
